--- a/assets/css/3-sections/_nieuws.sass
+++ b/assets/css/3-sections/_nieuws.sass
@@ -1,6 +1,11 @@
+.content.nieuws
+	.content-wrapper
+		h2
+			margin-top: 0px
+
 .share
 	margin-top: 30px
-	margin-bottom: 30px
+	margin-bottom: 50px
 	border-bottom: 1px solid $brand
 	text-align: right
 	@media screen and (max-width: $screen-xs-max)
