--- a/assets/css/3-sections/_doelgroepen.sass
+++ b/assets/css/3-sections/_doelgroepen.sass
@@ -24,6 +24,8 @@ section.doelgroepen, .row.doelgroepen
     text-align: center
     +perspective(1000)
     +transform-style(preserve-3d)
+    .icon-wrapper
+      margin-bottom: 25px
 
   .flipbox-front, .flipbox-back
     +backface-visibility(hidden)
