--- a/assets/css/4-modules/_breadcrumb.sass
+++ b/assets/css/4-modules/_breadcrumb.sass
@@ -3,6 +3,7 @@
 	min-height: 50px
 	padding-top: 20px
 	margin-bottom: 0px
+	border-radius: 0px
 	.pageTitle
 		padding: 0px
 		color: rgb(64,64,64)
