--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -11,6 +11,7 @@
 @import '2-base/placeholders'
 
 // sections
+@import '3-sections/agenda'
 @import '3-sections/banner'
 @import '3-sections/brain'
 @import '3-sections/contact'
