--- a/_includes/htmlClose.html
+++ b/_includes/htmlClose.html
@@ -7,6 +7,7 @@
 		<script src="{{ "/assets/js/jquery.sharrre.min.js" | prepend: site.baseurl }}"></script>
 		<script src="{{ "/assets/js/messages_nl.js" | prepend: site.baseurl }}"></script>
 		<script src="{{ "/assets/js/firebase.js" | prepend: site.baseurl }}"></script>
+		<script src="{{ "/assets/js/agenda.js" | prepend: site.baseurl }}"></script>
 		<script src="{{ "/assets/js/formulieren.js" | prepend: site.baseurl }}"></script>
 		<script src="{{ "/assets/js/functions.js" | prepend: site.baseurl }}"></script>
 		{% else %}
