--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7991,10 +7991,6 @@ h1, h2, h3, h4 {
   font-size: 2em;
   font-weight: 500; }
 
-section .fa {
-  font-size: 2.5em;
-  margin-bottom: 30px; }
-
 .content {
   padding: 15px 30px; }
   @media screen and (max-width: 767px) {
@@ -8023,6 +8019,56 @@ section {
   padding-top: 60px;
   padding-bottom: 60px; }
 
+#agenda h2 {
+  margin-top: 30px; }
+  @media screen and (max-width: 767px) {
+    #agenda h2 {
+      text-align: center; } }
+#agenda .agenda-list {
+  margin-bottom: 30px; }
+  #agenda .agenda-list .agenda-item {
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+    border-bottom: 1px solid #b9b9a7;
+    margin-bottom: 15px;
+    padding-bottom: 5px; }
+    #agenda .agenda-list .agenda-item ul {
+      padding-left: 0px; }
+    #agenda .agenda-list .agenda-item h3 {
+      margin: 5px 0; }
+    #agenda .agenda-list .agenda-item .btn.btn-primary {
+      width: 100%;
+      margin-bottom: 5px;
+      padding: 5px;
+      font-size: 13px;
+      letter-spacing: 1px; }
+    #agenda .agenda-list .agenda-item i.fa {
+      width: 15px;
+      margin-right: 5px;
+      text-align: center;
+      font-size: 14px; }
+    #agenda .agenda-list .agenda-item span.date {
+      margin-right: 15px; }
+
+@media screen and (max-width: 767px) {
+  #agenda .agenda-list {
+    text-align: center; }
+    #agenda .agenda-list .agenda-item {
+      width: 100%;
+      float: none; } }
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  #agenda .agenda-list .agenda-item {
+    width: 50%;
+    float: left; } }
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  #agenda .agenda-list .agenda-item {
+    width: 50%;
+    float: left; } }
+@media screen and (min-width: 1200px) {
+  #agenda .agenda-list .agenda-item {
+    width: 50%;
+    float: left; } }
 .container-fluid.banner {
   border-bottom: 1px solid #b9b9a7;
   background-color: #b9b9a7;
@@ -8247,7 +8293,7 @@ nav .navbar-nav li a {
   vertical-align: middle;
   font-weight: 600;
   padding: 10px 9px;
-  padding-top: 6px !important;
+  padding-top: 8px !important;
   padding-bottom: 0px !important;
   display: table-cell;
   color: #bab6a3; }
@@ -8374,7 +8420,8 @@ form {
   background-color: #c2c0b3;
   min-height: 50px;
   padding-top: 20px;
-  margin-bottom: 0px; }
+  margin-bottom: 0px;
+  border-radius: 0px; }
   .container-fluid.breadcrumb .pageTitle {
     padding: 0px;
     color: #404040;
