--- a/_includes/home-doelgroepen.html
+++ b/_includes/home-doelgroepen.html
@@ -11,7 +11,7 @@
             <div class="flipbox flipbox-back">
               <h2>{{post.title}}</h2>
               <p class="flipbox-text">{{post.content | remove: '<p>' | remove: '</p>'}}</p>
-              <p><a href="{{post.permalink}}" class="btn btn-sm btn-primary">lees meer</a></p>
+              <p><a href="/{{post.permalink}}" class="btn btn-sm btn-primary">lees meer</a></p>
             </div>
           </div>
         </div>
