--- a/_includes/doelgroepen.html
+++ b/_includes/doelgroepen.html
@@ -9,7 +9,7 @@
         <div class="flipbox flipbox-back">
           <h2>{{post.title}}</h2>
           <p class="flipbox-text">{{post.content | remove: '<p>' | remove: '</p>'}}</p>
-          <p><a href="{{post.link}}" class="btn btn-sm btn-primary">lees meer</a></p>
+          <p><a href="/{{post.permalink}}" class="btn btn-sm btn-primary">lees meer</a></p>
         </div>
       </div>
     </div>
