logische titel voor formulier

--- a/_includes/agenda.html
+++ b/_includes/agenda.html
@@ -1,5 +1,5 @@
 <div class="agenda" id="agenda">
 	<h2>Agenda</h2>
 	{% include agenda-items.html %}
-	{% include form-workshop.html %}
+	{% include form-inschrijven.html %}
 </div>
