alert default red

--- a/assets/css/1-tools/_variables.sass
+++ b/assets/css/1-tools/_variables.sass
@@ -68,7 +68,7 @@ $input-bg: white
 $input-border: $brand
 $input-border-radius: 0px
 $input-border-focus: $accent
-$state-danger-text: white
+//$state-danger-text: white
 
 // breadcrumbs
 $breadcrumb-padding-vertical: 4px
