--- a/_includes/home-themas.html
+++ b/_includes/home-themas.html
@@ -1,3 +1,4 @@
+{% assign count = 0 %}
 <section class="container-fluid themas">
   <div class="container">
     <div class="row">
@@ -7,6 +8,7 @@
     </div>
     <div class="row">
       {% for thema in site.data.themas %}
+      {% assign count = count | plus: 1%}
       <div class="col-sm-6 col-md-3 content">
         <h3>{{thema.title}}</h3>
         <ul>
@@ -15,6 +17,9 @@
           {% endfor %}
         </ul>
       </div>
+      {% if count == 2 %}
+      <div class="visible-sm clearfix"></div>
+      {% endif %}
       {% endfor %}
     </div>
   </div>
