--- a/assets/css/3-sections/_fasen.sass
+++ b/assets/css/3-sections/_fasen.sass
@@ -14,6 +14,11 @@ section.fasen
     @media screen and (max-width: $screen-xs-max)
       padding: 0px
 
+    @media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max)
+      padding: 5px
+    @media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max)
+      padding: 15px
+
 @media screen and (max-width: $screen-xs-max)
   footer
     ul
