--- a/assets/css/3-sections/_submenu.sass
+++ b/assets/css/3-sections/_submenu.sass
@@ -9,3 +9,8 @@
 @media screen and (max-width: $screen-xs-max)
 	.menu-sidebar
 		text-align: center
+	.menu-sidebar
+		margin-bottom: 30px
+		border-bottom: 1px solid $brand
+		> .nav-stacked
+			padding-bottom: 30px
