--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -13,9 +13,9 @@ body
   -webkit-font-smoothing: antialiased
   height: 100%
   position: relative
-  padding-top: 86px
+  //padding-top: 86px
   @media screen and (max-width: $screen-xs-max)
-    padding-top: 57px
+    //padding-top: 57px
 
 .btn-primary
   background-color: $accent
