--- a/assets/css/4-modules/_breadcrumb.sass
+++ b/assets/css/4-modules/_breadcrumb.sass
@@ -2,14 +2,17 @@
 	background-color: #c2c0b3
 	min-height: 50px
 	padding-top: 20px
-	margin-bottom: 0px
 	border-radius: 0px
+	margin-bottom: 0px
 	.pageTitle
 		padding: 0px
+		margin-top: 2px
 		color: rgb(64,64,64)
 		font-size: 19px
 	.breadcrumb
 		display: inline-block
+		margin-bottom: 16px
+		padding: 0px
 		a
 			color: rgb(64,64,64)
 			&:hover
