--- a/assets/css/1-tools/_variables.sass
+++ b/assets/css/1-tools/_variables.sass
@@ -43,12 +43,11 @@ $nav-link-hover-bg: transparent
 
 
 // .nav-tabs
-$nav-tabs-border-color: transparent
+$nav-tabs-border-color: $brand
 $border-radius-base: 0px
-
-$nav-tabs-active-link-hover-color: transparent
+$nav-tabs-active-link-hover-color: $accent
 $nav-tabs-active-link-hover-bg: transparent
-$nav-tabs-active-link-hover-border-color: transparent
+$nav-tabs-active-link-hover-border-color: $brand
 
 // .nav-pills
 $nav-pills-border-radius: 0px
