--- a/_layouts/overzicht.html
+++ b/_layouts/overzicht.html
@@ -26,7 +26,7 @@ layout: default
 					<li role="presentation"><a href="#themas" aria-controls="themas" role="tab" data-toggle="tab">themas</a></li>
 					<li role="presentation"><a href="#trajecten" aria-controls="trajecten" role="tab" data-toggle="tab">trajecten</a></li>
 					<li role="presentation"><a href="#workshops" aria-controls="workshops" role="tab" data-toggle="tab">workshops</a></li>
-					<li role="presentation"><a href="#overig" aria-controls="overig" role="tab" data-toggle="tab">overig</a></li>
+					<li role="presentation"><a href="#overig" aria-controls="overig" role="tab" data-toggle="tab">pagina's</a></li>
 				</ul>
 				<div class="tab-content">
 					<div class="tab-pane fade in active" role="tabpanel" id="doelgroepen">
