--- a/_includes/home-doelgroepen.html
+++ b/_includes/home-doelgroepen.html
@@ -1,6 +1,6 @@
 <section class="container-fluid doelgroepen">
   <div class="container">
-    <div class="row">{% for post in site.tags['doelgroep'] %}
+    <div class="row">{% for post in site.tags['doelgroep'] %}{% if post.publish != false %}
       <div class="col-sm-3">
         <div ontouchstart="this.classList.toggle('hover');" class="flipbox-container">
           <div class="flipper">
@@ -15,7 +15,7 @@
             </div>
           </div>
         </div>
-      </div>{% endfor %}
+      </div>{%endif%}{% endfor %}
     </div>
   </div>
 </section>
