--- a/_includes/home-wat-wij-doen.html
+++ b/_includes/home-wat-wij-doen.html
@@ -6,8 +6,8 @@
         <div class="row">
           <div class="col-xs-12 visible-xs"><img src="http://brainspa.nl/wp-content/uploads/2015/10/brains2-300x300.png" class="img-responsive"/></div>
         </div>
-        <p class="lead">Neurofeedback, biofeedback, Mindfulness oefeningen en coaching wordt geïntegreerd aangeboden om de ontwikkeling die jij wil doormaken vanuit verschillende niveaus kracht bij te zetten. Met een betere balans in brein/lichaamsprocessen, een bewuste mindset en vrij van automatische patronen, ontstaat er innerlijk ruimte en komt er energie vrij voor het doormaken van de groei die bij jou past.</p>
-        <p><a href="#" class="btn btn-primary btn-sm">lees meer</a></p>
+        <p class="lead">{{content | remove: '<p>' | remove: '</p>'}}</p>
+        <p><a href="/onze-aanpak" class="btn btn-primary btn-sm">lees meer</a></p>
       </div>
       <div class="col-sm-4 hidden-xs"><img src="http://brainspa.nl/wp-content/uploads/2015/10/brains2-300x300.png" class="img-responsive"/></div>
     </div>
