--- a/_layouts/overzicht.html
+++ b/_layouts/overzicht.html
@@ -18,18 +18,200 @@ layout: default
 			<div class="col-sm-12">
 				{{content}}
 				<ul class="nav nav-tabs" role="tablist">
-					<li role="presentation" class="active"><a href="#doelgroepen" aria-controls="doelgroepen" role="tab" data-toggle="tab">doelgroepen</a></li>
+					<li role="presentation" class="active"><a href="#overig" aria-controls="overig" role="tab" data-toggle="tab">pagina's</a></li>
+					<li role="presentation"><a href="#workshops" aria-controls="workshops" role="tab" data-toggle="tab">workshops</a></li>
+					<li role="presentation"><a href="#nieuws" aria-controls="nieuws" role="tab" data-toggle="tab">nieuws</a></li>
+					<li role="presentation"><a href="#themas" aria-controls="themas" role="tab" data-toggle="tab">themas</a></li>
+					<li role="presentation"><a href="#doelgroepen" aria-controls="doelgroepen" role="tab" data-toggle="tab">doelgroepen</a></li>
 					<li role="presentation"><a href="#fasen" aria-controls="fasen" role="tab" data-toggle="tab">fasen</a></li>
 					<li role="presentation"><a href="#methoden" aria-controls="methoden" role="tab" data-toggle="tab">methoden</a></li>
-					<li role="presentation"><a href="#nieuws" aria-controls="nieuws" role="tab" data-toggle="tab">nieuws</a></li>
 					<li role="presentation"><a href="#team" aria-controls="team" role="tab" data-toggle="tab">team</a></li>
-					<li role="presentation"><a href="#themas" aria-controls="themas" role="tab" data-toggle="tab">themas</a></li>
 					<li role="presentation"><a href="#trajecten" aria-controls="trajecten" role="tab" data-toggle="tab">trajecten</a></li>
-					<li role="presentation"><a href="#workshops" aria-controls="workshops" role="tab" data-toggle="tab">workshops</a></li>
-					<li role="presentation"><a href="#overig" aria-controls="overig" role="tab" data-toggle="tab">pagina's</a></li>
 				</ul>
 				<div class="tab-content">
-					<div class="tab-pane fade in active" role="tabpanel" id="doelgroepen">
+					<div class="tab-pane fade in active" role="tabpanel" id="overig">
+						<h3>Pagina's</h3>
+						<div class="table-responsive">
+							<table class="table table-striped vakgebieden">
+								<thead>
+									<tr>
+										<th>#</th>
+										<th>live</th>
+										<th>edit</th>
+										<th>titel</th>
+										<th>permalink</th>
+										<th>layout</th>
+									</tr>
+								</thead>
+								<tbody>
+									{% assign count = 0 %}
+									{% for page in site.pages %}
+									{% if page.layout == 'page' or page.layout == 'nieuws' or page.layout == 'contact' or page.layout == 'home' %}
+									{% assign count = count | plus: 1 %}
+									<tr>
+										<td>{{count}}</td>
+										<td>{% if page.publish != false %}<i class="fa fa-toggle-on"></i>{% else %}<i class="fa fa-toggle-off"></i>{% endif %}</td>
+										<td><a href="{{cms}}/{{page.path}}"><i class="fa fa-pencil-square-o"></i></a></td>
+										<td><a href="{{page.url}}">{{page.title}}</a></td>
+										<td><a href="{{page.url}}">{{page.url}}</a></td>
+										<td>{{page.layout}}</td>
+									</tr>
+									{% endif %}
+									{% endfor %}
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div class="tab-pane fade" role="tabpanel" id="workshops">
+						<h3>Workshops</h3>
+						<p><a href="http://prose.io/#p4m/brainspa/tree/gh-pages/_posts/workshops"><i class="fa fa-plus"></i> nieuwe workshop toevoegen »</a></p>
+						<div class="table-responsive">
+							<table class="table table-striped">
+								<thead>
+									<tr>
+										<th>#</th>
+										<th>live</th>
+										<th>edit</th>
+										<th>titel</th>
+										<th>permalink</th>
+										<th><i class="fa fa-tags"></i></th>
+										<th><i class="fa calender"></i> gepland</th>
+									</tr>
+								</thead>
+								<tbody>
+									{% assign count = 0 %}
+									{% for post in site.tags['workshop'] %}
+									{% assign count = count | plus: 1 %}
+									<tr>
+										<td>{{count}}</td>
+										<td>{% if post.publish != false %}<i class="fa fa-toggle-on"></i>{% else %}<i class="fa fa-toggle-off"></i>{% endif %}</td>
+										<td class="text-center"><a href="{{cms}}/{{post.path}}"><i class="fa fa-pencil-square-o"></i></a></td>
+										<td><a href="{{post.url}}">{{post.title}}</a></td>
+										<td><a href="{{post.url}}">{{post.url}}</a></td>
+										<td>
+											{% assign t = 0 %}
+											{% for tag in post.tags %}
+											{% assign t = t | plus: 1 %}
+											{% if t == 1 %}
+											<ul class="list-unstyled">
+											{% endif %}
+												<li>{{tag}}</li>
+											{% endfor %}
+											{% if t > 1 %}
+											</ul>
+											{% endif %}
+										</td>
+										<td>
+											{% assign pageTitle = post.title %}
+											{% assign a = 0 %}
+											{% for agenda in site.data.agenda %}
+											{% if agenda.titel == pageTitle %}
+											{% assign a = a | plus: 1 %}
+											{% if a == 1 %}
+											<ul class="list-unstyled">
+											{% endif %}
+											<li><a href="{{cms}}/_data/agenda.yml"><i class="fa fa-pencil-square-o"></i></a> {{agenda.datum}}</li>
+											{% endif %}
+											{% endfor %}
+											{% if a > 1 %}
+											</ul>
+											{% endif %}
+										</td>
+									</tr>
+									{% endfor %}
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div class="tab-pane fade" role="tabpanel" id="nieuws">
+						<h3>Nieuws</h3>
+						<p><a href="http://prose.io/#p4m/brainspa/tree/gh-pages/_posts/nieuws"><i class="fa fa-plus"></i> nieuw nieuwsbericht toevoegen »</a></p>
+						<div class="table-responsive">
+							<table class="table table-striped">
+								<thead>
+									<tr>
+										<th>#</th>
+										<th>live</th>
+										<th>edit</th>
+										<th>titel</th>
+										<th>permalink</th>
+										<th><i class="fa fa-tags"></i></th>
+									</tr>
+								</thead>
+								<tbody>
+									{% assign count = 0 %}
+									{% for post in site.tags['nieuws'] %}
+									{% assign count = count | plus: 1 %}
+									<tr>
+										<td>{{count}}</td>
+										<td>{% if post.publish != false %}<i class="fa fa-toggle-on"></i>{% else %}<i class="fa fa-toggle-off"></i>{% endif %}</td>
+										<td class="text-center"><a href="{{cms}}/{{post.path}}"><i class="fa fa-pencil-square-o"></i></a></td>
+										<td><a href="{{post.url}}">{{post.title}}</a></td>
+										<td><a href="{{post.url}}">{{post.url}}</a></td>
+										<td>
+											{% assign t = 0 %}
+											{% for tag in post.tags %}
+											{% assign t = t | plus: 1 %}
+											{% if t == 1 %}
+											<ul class="list-unstyled">
+											{% endif %}
+												<li>{{tag}}</li>
+											{% endfor %}
+											{% if t > 1 %}
+											</ul>
+											{% endif %}
+										</td>
+									</tr>
+									{% endfor %}
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div class="tab-pane fade" role="tabpanel" id="themas">
+						<h3>Thema's</h3>
+						<p><a href="http://prose.io/#p4m/brainspa/tree/gh-pages/_posts/themas"><i class="fa fa-plus"></i> nieuw thema toevoegen »</a></p>
+						<div class="table-responsive">
+							<table class="table table-striped">
+								<thead>
+									<tr>
+										<th>#</th>
+										<th>live</th>
+										<th>edit</th>
+										<th>titel</th>
+										<th>permalink</th>
+										<th><i class="fa fa-tags"></i></th>
+									</tr>
+								</thead>
+								<tbody>
+									{% assign count = 0 %}
+									{% for post in site.tags['thema'] %}
+									{% assign count = count | plus: 1 %}
+									<tr>
+										<td>{{count}}</td>
+										<td>{% if post.publish != false %}<i class="fa fa-toggle-on"></i>{% else %}<i class="fa fa-toggle-off"></i>{% endif %}</td>
+										<td class="text-center"><a href="{{cms}}/{{post.path}}"><i class="fa fa-pencil-square-o"></i></a></td>
+										<td><a href="{{post.url}}">{{post.title}}</a></td>
+										<td><a href="{{post.url}}">{{post.url}}</a></td>
+										<td>
+											{% assign t = 0 %}
+											{% for tag in post.tags %}
+											{% assign t = t | plus: 1 %}
+											{% if t == 1 %}
+											<ul class="list-unstyled">
+											{% endif %}
+												<li>{{tag}}</li>
+											{% endfor %}
+											{% if t > 1 %}
+											</ul>
+											{% endif %}
+										</td>
+									</tr>
+									{% endfor %}
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div class="tab-pane fade" role="tabpanel" id="doelgroepen">
 						<h3>Doelgroepen</h3>
 						<p><a href="http://prose.io/#p4m/brainspa/tree/gh-pages/_posts/doelgroepen"><i class="fa fa-plus"></i> nieuwe doelgroep toevoegen »</a></p>
 						<div class="table-responsive">
@@ -161,50 +343,6 @@ layout: default
 							</table>
 						</div>						
 					</div>
-					<div class="tab-pane fade" role="tabpanel" id="nieuws">
-						<h3>Nieuws</h3>
-						<p><a href="http://prose.io/#p4m/brainspa/tree/gh-pages/_posts/nieuws"><i class="fa fa-plus"></i> nieuw nieuwsbericht toevoegen »</a></p>
-						<div class="table-responsive">
-							<table class="table table-striped">
-								<thead>
-									<tr>
-										<th>#</th>
-										<th>live</th>
-										<th>edit</th>
-										<th>titel</th>
-										<th>permalink</th>
-										<th><i class="fa fa-tags"></i></th>
-									</tr>
-								</thead>
-								<tbody>
-									{% assign count = 0 %}
-									{% for post in site.tags['nieuws'] %}
-									{% assign count = count | plus: 1 %}
-									<tr>
-										<td>{{count}}</td>
-										<td>{% if post.publish != false %}<i class="fa fa-toggle-on"></i>{% else %}<i class="fa fa-toggle-off"></i>{% endif %}</td>
-										<td class="text-center"><a href="{{cms}}/{{post.path}}"><i class="fa fa-pencil-square-o"></i></a></td>
-										<td><a href="{{post.url}}">{{post.title}}</a></td>
-										<td><a href="{{post.url}}">{{post.url}}</a></td>
-										<td>
-											{% assign t = 0 %}
-											{% for tag in post.tags %}
-											{% assign t = t | plus: 1 %}
-											{% if t == 1 %}
-											<ul class="list-unstyled">
-											{% endif %}
-												<li>{{tag}}</li>
-											{% endfor %}
-											{% if t > 1 %}
-											</ul>
-											{% endif %}
-										</td>
-									</tr>
-									{% endfor %}
-								</tbody>
-							</table>
-						</div>
-					</div>
 					<div class="tab-pane fade" role="tabpanel" id="team">
 						<h3>Team</h3>
 						<p><a href="http://prose.io/#p4m/brainspa/tree/gh-pages/_posts/team"><i class="fa fa-plus"></i> nieuw teamlid toevoegen »</a></p>
@@ -223,50 +361,6 @@ layout: default
 								<tbody>
 									{% assign count = 0 %}
 									{% for post in site.tags['team'] %}
-									{% assign count = count | plus: 1 %}
-									<tr>
-										<td>{{count}}</td>
-										<td>{% if post.publish != false %}<i class="fa fa-toggle-on"></i>{% else %}<i class="fa fa-toggle-off"></i>{% endif %}</td>
-										<td class="text-center"><a href="{{cms}}/{{post.path}}"><i class="fa fa-pencil-square-o"></i></a></td>
-										<td><a href="{{post.url}}">{{post.title}}</a></td>
-										<td><a href="{{post.url}}">{{post.url}}</a></td>
-										<td>
-											{% assign t = 0 %}
-											{% for tag in post.tags %}
-											{% assign t = t | plus: 1 %}
-											{% if t == 1 %}
-											<ul class="list-unstyled">
-											{% endif %}
-												<li>{{tag}}</li>
-											{% endfor %}
-											{% if t > 1 %}
-											</ul>
-											{% endif %}
-										</td>
-									</tr>
-									{% endfor %}
-								</tbody>
-							</table>
-						</div>
-					</div>
-					<div class="tab-pane fade" role="tabpanel" id="themas">
-						<h3>Thema's</h3>
-						<p><a href="http://prose.io/#p4m/brainspa/tree/gh-pages/_posts/themas"><i class="fa fa-plus"></i> nieuw thema toevoegen »</a></p>
-						<div class="table-responsive">
-							<table class="table table-striped">
-								<thead>
-									<tr>
-										<th>#</th>
-										<th>live</th>
-										<th>edit</th>
-										<th>titel</th>
-										<th>permalink</th>
-										<th><i class="fa fa-tags"></i></th>
-									</tr>
-								</thead>
-								<tbody>
-									{% assign count = 0 %}
-									{% for post in site.tags['thema'] %}
 									{% assign count = count | plus: 1 %}
 									<tr>
 										<td>{{count}}</td>
@@ -332,100 +426,6 @@ layout: default
 											{% endif %}
 										</td>
 									</tr>
-									{% endfor %}
-								</tbody>
-							</table>
-						</div>
-					</div>
-					<div class="tab-pane fade" role="tabpanel" id="workshops">
-						<h3>Workshops</h3>
-						<p><a href="http://prose.io/#p4m/brainspa/tree/gh-pages/_posts/workshops"><i class="fa fa-plus"></i> nieuwe workshop toevoegen »</a></p>
-						<div class="table-responsive">
-							<table class="table table-striped">
-								<thead>
-									<tr>
-										<th>#</th>
-										<th>live</th>
-										<th>edit</th>
-										<th>titel</th>
-										<th>permalink</th>
-										<th><i class="fa fa-tags"></i></th>
-										<th><i class="fa calender"></i> gepland</th>
-									</tr>
-								</thead>
-								<tbody>
-									{% assign count = 0 %}
-									{% for post in site.tags['workshop'] %}
-									{% assign count = count | plus: 1 %}
-									<tr>
-										<td>{{count}}</td>
-										<td>{% if post.publish != false %}<i class="fa fa-toggle-on"></i>{% else %}<i class="fa fa-toggle-off"></i>{% endif %}</td>
-										<td class="text-center"><a href="{{cms}}/{{post.path}}"><i class="fa fa-pencil-square-o"></i></a></td>
-										<td><a href="{{post.url}}">{{post.title}}</a></td>
-										<td><a href="{{post.url}}">{{post.url}}</a></td>
-										<td>
-											{% assign t = 0 %}
-											{% for tag in post.tags %}
-											{% assign t = t | plus: 1 %}
-											{% if t == 1 %}
-											<ul class="list-unstyled">
-											{% endif %}
-												<li>{{tag}}</li>
-											{% endfor %}
-											{% if t > 1 %}
-											</ul>
-											{% endif %}
-										</td>
-										<td>
-											{% assign pageTitle = post.title %}
-											{% assign a = 0 %}
-											{% for agenda in site.data.agenda %}
-											{% if agenda.titel == pageTitle %}
-											{% assign a = a | plus: 1 %}
-											{% if a == 1 %}
-											<ul class="list-unstyled">
-											{% endif %}
-											<li><a href="{{cms}}/_data/agenda.yml"><i class="fa fa-pencil-square-o"></i></a> {{agenda.datum}}</li>
-											{% endif %}
-											{% endfor %}
-											{% if a > 1 %}
-											</ul>
-											{% endif %}
-										</td>
-									</tr>
-									{% endfor %}
-								</tbody>
-							</table>
-						</div>
-					</div>
-					<div class="tab-pane fade" role="tabpanel" id="overig">
-						<h3>Overige pagina's</h3>
-						<div class="table-responsive">
-							<table class="table table-striped vakgebieden">
-								<thead>
-									<tr>
-										<th>#</th>
-										<th>live</th>
-										<th>edit</th>
-										<th>titel</th>
-										<th>permalink</th>
-										<th>layout</th>
-									</tr>
-								</thead>
-								<tbody>
-									{% assign count = 0 %}
-									{% for page in site.pages %}
-									{% if page.layout == 'page' or page.layout == 'nieuws' or page.layout == 'contact' or page.layout == 'home' %}
-									{% assign count = count | plus: 1 %}
-									<tr>
-										<td>{{count}}</td>
-										<td>{% if page.publish != false %}<i class="fa fa-toggle-on"></i>{% else %}<i class="fa fa-toggle-off"></i>{% endif %}</td>
-										<td><a href="{{cms}}/{{page.path}}"><i class="fa fa-pencil-square-o"></i></a></td>
-										<td><a href="{{page.url}}">{{page.title}}</a></td>
-										<td><a href="{{page.url}}">{{page.url}}</a></td>
-										<td>{{page.layout}}</td>
-									</tr>
-									{% endif %}
 									{% endfor %}
 								</tbody>
 							</table>
