--- a/assets/css/1-tools/_variables.sass
+++ b/assets/css/1-tools/_variables.sass
@@ -35,6 +35,7 @@ $navbar-default-toggle-border-color: $brand
 $navbar-default-toggle-icon-bar-bg: $brand
 $navbar-default-link-active-color: $brand
 $navbar-default-link-active-bg: transparent
+$navbar-default-link-hover-color: #777654
 
 $blockquote-small-color: $brand
 
