--- a/assets/css/3-sections/_agenda.sass
+++ b/assets/css/3-sections/_agenda.sass
@@ -16,11 +16,11 @@
       h3
         margin: 5px 0
       .btn.btn-primary
-        width: 100%
+        //width: 100%
         margin-bottom: 5px
-        padding: 5px
-        font-size: 13px
-        letter-spacing: 1px
+        //padding: 5px
+        //font-size: 13px
+        //letter-spacing: 1px
       i.fa
         width: 15px
         margin-right: 5px
@@ -28,31 +28,3 @@
         font-size: 14px
       span.date
         margin-right: 15px
-
-
-@media screen and (max-width: $screen-xs-max)
-  #agenda
-    .agenda-list
-      text-align: center
-      .agenda-item
-        width: 100%
-        float: none
-
-@media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max)
-  #agenda
-    .agenda-list
-      .agenda-item
-        width: 50%
-        float: left
-@media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max)
-  #agenda
-    .agenda-list
-      .agenda-item
-        width: 50%
-        float: left
-@media screen and (min-width: $screen-lg-min)
-  #agenda
-    .agenda-list
-      .agenda-item
-        width: 50%
-        float: left
