--- a/assets/css/3-sections/_submenu.sass
+++ b/assets/css/3-sections/_submenu.sass
@@ -1,10 +1,7 @@
 .menu-sidebar
-	> .nav-stacked
-		border-right: 1px solid $brand
-		@media screen and (max-width: $screen-xs-max)
-			border: none
-	.submenu
-		margin: 15px 30px
+	.nav-stacked
+		a:active, a:focus, a:hover
+			color: $activelink
 
 @media screen and (max-width: $screen-xs-max)
 	.menu-sidebar
