--- a/assets/css/3-sections/_fasen.sass
+++ b/assets/css/3-sections/_fasen.sass
@@ -5,9 +5,8 @@ section.fasen
     font-size: 2.2em
     margin-bottom: 15px
 
-  h3
-    text-align: center
-
+  .content
+    border: none
   .content-wrapper
     padding: 30px
 
