--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -10,10 +10,16 @@ header.container-fluid
     background-attachment: scroll
     repeat: no-repeat
   h1
-    margin-top: 30px
     margin-bottom: 30px
     @media screen and (max-width: $screen-xs-max)
+      margin-top: 30px
       font-size: 24px
+    @media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max)
+      margin-top: 40px
+    @media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max)
+      margin-top: 70px
+    @media screen and (min-width: $screen-lg-min)
+      margin-top: 80px
   .lead
     @media screen and (max-width: $screen-xs-max)
       font-size: 15px
