--- a/assets/css/3-sections/_wat-wij-doen.sass
+++ b/assets/css/3-sections/_wat-wij-doen.sass
@@ -1,14 +1,14 @@
 section.wat-wij-doen
-  border-top: 1px solid $warm
-  background-color: tint($warm,50%)
+  border-top: 1px solid #b9b9a7
+  background-color: #c4c4b8
   .btn.btn-primary
-    background-color: $warm
-    border-color: $warm
+    background-color: #b9b9a7
+    border-color: #b9b9a7
     +transition(all 300ms ease-in-out)
     &:hover
       background-color: white
       border-color: white
-      color: $warm
+      color: #b9b9a7
 
 @media screen and (max-width: $screen-xs-max)
   section.wat-wij-doen
