--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3961,7 +3961,7 @@ tbody.collapse.in {
   .navbar-default .navbar-nav > li > a {
     color: #b9b9a7; }
     .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-      color: #333;
+      color: #777654;
       background-color: transparent; }
   .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #b9b9a7;
@@ -3985,7 +3985,7 @@ tbody.collapse.in {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
       color: #b9b9a7; }
       .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-        color: #333;
+        color: #777654;
         background-color: transparent; }
     .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
       color: #b9b9a7;
@@ -3996,11 +3996,11 @@ tbody.collapse.in {
   .navbar-default .navbar-link {
     color: #b9b9a7; }
     .navbar-default .navbar-link:hover {
-      color: #333; }
+      color: #777654; }
   .navbar-default .btn-link {
     color: #b9b9a7; }
     .navbar-default .btn-link:hover, .navbar-default .btn-link:focus {
-      color: #333; }
+      color: #777654; }
     .navbar-default .btn-link[disabled]:hover, .navbar-default .btn-link[disabled]:focus, fieldset[disabled] .navbar-default .btn-link:hover, fieldset[disabled] .navbar-default .btn-link:focus {
       color: #ccc; }
 
@@ -7970,10 +7970,12 @@ body {
 
 .btn-primary {
   background-color: #3498db;
+  border-color: #3498db;
   -webkit-transition: all 300ms ease-in-out;
   -moz-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
-  font-weight: 600; }
+  font-weight: 600;
+  padding: 12px 20px; }
   .btn-primary:hover {
     background-color: white;
     color: #3498db;
@@ -7988,10 +7990,12 @@ h1, h2, h3, h4 {
   font-weight: 500; }
 
 .content {
-  padding: 15px 30px; }
+  padding: 15px 30px;
+  border-left: 1px solid #b9b9a7; }
   @media screen and (max-width: 767px) {
     .content {
-      padding: 15px; } }
+      padding: 15px;
+      border: none; } }
   .content ul {
     padding-left: 20px; }
   .content ul.adres {
@@ -8034,11 +8038,7 @@ section {
     #agenda .agenda-list .agenda-item h3 {
       margin: 5px 0; }
     #agenda .agenda-list .agenda-item .btn.btn-primary {
-      width: 100%;
-      margin-bottom: 5px;
-      padding: 5px;
-      font-size: 13px;
-      letter-spacing: 1px; }
+      margin-bottom: 5px; }
     #agenda .agenda-list .agenda-item i.fa {
       width: 15px;
       margin-right: 5px;
@@ -8047,24 +8047,6 @@ section {
     #agenda .agenda-list .agenda-item span.date {
       margin-right: 15px; }
 
-@media screen and (max-width: 767px) {
-  #agenda .agenda-list {
-    text-align: center; }
-    #agenda .agenda-list .agenda-item {
-      width: 100%;
-      float: none; } }
-@media screen and (min-width: 768px) and (max-width: 991px) {
-  #agenda .agenda-list .agenda-item {
-    width: 50%;
-    float: left; } }
-@media screen and (min-width: 992px) and (max-width: 1199px) {
-  #agenda .agenda-list .agenda-item {
-    width: 50%;
-    float: left; } }
-@media screen and (min-width: 1200px) {
-  #agenda .agenda-list .agenda-item {
-    width: 50%;
-    float: left; } }
 .container-fluid.banner {
   border-bottom: 1px solid #b9b9a7;
   background-color: #b9b9a7;
@@ -8202,8 +8184,8 @@ section.fasen {
     color: #b9b9a7;
     font-size: 2.2em;
     margin-bottom: 15px; }
-  section.fasen h3 {
-    text-align: center; }
+  section.fasen .content {
+    border: none; }
   section.fasen .content-wrapper {
     padding: 30px; }
     @media screen and (max-width: 767px) {
@@ -8248,11 +8230,20 @@ header.container-fluid {
   background-background-attachment: scroll;
   background-repeat: no-repeat; }
   header.container-fluid h1 {
-    margin-top: 30px;
     margin-bottom: 30px; }
     @media screen and (max-width: 767px) {
       header.container-fluid h1 {
+        margin-top: 30px;
         font-size: 24px; } }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      header.container-fluid h1 {
+        margin-top: 40px; } }
+    @media screen and (min-width: 992px) and (max-width: 1199px) {
+      header.container-fluid h1 {
+        margin-top: 70px; } }
+    @media screen and (min-width: 1200px) {
+      header.container-fluid h1 {
+        margin-top: 80px; } }
   @media screen and (max-width: 767px) {
     header.container-fluid .lead {
       font-size: 15px; } }
@@ -8341,6 +8332,13 @@ header.container-fluid {
       padding-bottom: 8px !important; } }
 .content.nieuws .content-wrapper h2 {
   margin-top: 0px; }
+  .content.nieuws .content-wrapper h2 a {
+    color: #3b3b3b;
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out; }
+    .content.nieuws .content-wrapper h2 a:active, .content.nieuws .content-wrapper h2 a:focus, .content.nieuws .content-wrapper h2 a:hover {
+      color: #b9b9a7; }
 
 .share {
   margin-top: 30px;
@@ -8354,13 +8352,8 @@ header.container-fluid {
     font-size: 1.2em;
     margin-bottom: 0px; }
 
-.menu-sidebar > .nav-stacked {
-  border-right: 1px solid #b9b9a7; }
-  @media screen and (max-width: 767px) {
-    .menu-sidebar > .nav-stacked {
-      border: none; } }
-.menu-sidebar .submenu {
-  margin: 15px 30px; }
+.menu-sidebar .nav-stacked a:active, .menu-sidebar .nav-stacked a:focus, .menu-sidebar .nav-stacked a:hover {
+  color: #777654; }
 
 @media screen and (max-width: 767px) {
   .menu-sidebar {
@@ -8400,18 +8393,18 @@ section.themas {
     padding-left: 0px;
     list-style: none; } }
 section.wat-wij-doen {
-  border-top: 1px solid #d8a37b;
-  background-color: #ecd1bd; }
+  border-top: 1px solid #b9b9a7;
+  background-color: #c4c4b8; }
   section.wat-wij-doen .btn.btn-primary {
-    background-color: #d8a37b;
-    border-color: #d8a37b;
+    background-color: #b9b9a7;
+    border-color: #b9b9a7;
     -webkit-transition: all 300ms ease-in-out;
     -moz-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out; }
     section.wat-wij-doen .btn.btn-primary:hover {
       background-color: white;
       border-color: white;
-      color: #d8a37b; }
+      color: #b9b9a7; }
 
 @media screen and (max-width: 767px) {
   section.wat-wij-doen {
@@ -8464,21 +8457,31 @@ form {
   margin-bottom: 0px; }
   .container-fluid.breadcrumb .pageTitle {
     padding: 0px;
+    padding-left: 15px;
     margin-top: 2px;
     color: #404040;
     font-size: 19px; }
+    @media screen and (max-width: 767px) {
+      .container-fluid.breadcrumb .pageTitle {
+        padding-left: 0px; } }
   .container-fluid.breadcrumb .breadcrumb {
     display: inline-block;
     margin-bottom: 16px;
     padding: 0px; }
-    .container-fluid.breadcrumb .breadcrumb a {
-      color: #404040; }
-      .container-fluid.breadcrumb .breadcrumb a:hover {
-        color: #404040;
-        text-decoration: none;
-        border-bottom: 1px solid #404040; }
+    .container-fluid.breadcrumb .breadcrumb > li + li:before {
+      padding: 0px 3px; }
+    .container-fluid.breadcrumb .breadcrumb li {
+      font-size: 12px; }
+      .container-fluid.breadcrumb .breadcrumb li a {
+        color: #404040; }
+        .container-fluid.breadcrumb .breadcrumb li a:hover {
+          color: #404040;
+          text-decoration: none;
+          border-bottom: 1px solid #404040; }
   .container-fluid.breadcrumb .bc {
     text-align: right; }
+    .container-fluid.breadcrumb .bc span {
+      font-size: 12px; }
 
 @media screen and (max-width: 767px) {
   .container-fluid.breadcrumb .pageTitle {
