--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -24,7 +24,7 @@ body
   font-weight: 600
   padding: 12px 20px
 
-  &:hover
+  &:hover, &:active, &:focus
     background-color: white
     color: $accent
     border-color: $accent
