--- a/assets/css/3-sections/_contact.sass
+++ b/assets/css/3-sections/_contact.sass
@@ -3,6 +3,11 @@ section.contact
   border-bottom: 1px solid tint($brand,10%)
   h3
     margin-bottom: 30px
+body.contact
+  .container-fluid
+    .content
+      border: none
+
 ul.adres
 
   li:nth-child(1)
