--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -38,9 +38,11 @@ h1, h2, h3, h4
     size: 2em
     weight: 500
 
-.content
-  padding: 15px 30px
+.col-sm-9.content
+  padding: 0px 80px
+  max-width: 800px
   border-left: 1px solid $brand
+
   @media screen and (max-width: $screen-xs-max)
     padding: 15px
     border: none
