--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7989,25 +7989,26 @@ h1, h2, h3, h4 {
   font-size: 2em;
   font-weight: 500; }
 
-.content {
-  padding: 15px 30px;
+.col-sm-9.content {
+  padding: 0px 80px;
+  max-width: 800px;
   border-left: 1px solid #b9b9a7; }
   @media screen and (max-width: 767px) {
-    .content {
+    .col-sm-9.content {
       padding: 15px;
       border: none; } }
-  .content ul {
+  .col-sm-9.content ul {
     padding-left: 20px; }
-  .content ul.adres {
+  .col-sm-9.content ul.adres {
     padding-left: 0px; }
     @media screen and (max-width: 767px) {
-      .content ul.adres {
+      .col-sm-9.content ul.adres {
         text-align: center; } }
-  .content h2 {
+  .col-sm-9.content h2 {
     font-size: 19px;
     margin-top: 20px;
     margin-bottom: 20px; }
-  .content h3 {
+  .col-sm-9.content h3 {
     font-size: 16px; }
 
 .lead {
@@ -8067,6 +8068,9 @@ section.contact {
   border-bottom: 1px solid #c0c0b0; }
   section.contact h3 {
     margin-bottom: 30px; }
+
+body.contact .container-fluid .content {
+  border: none; }
 
 ul.adres li:nth-child(1) {
   font-weight: 800; }
