--- a/_includes/home-wat-wij-doen.html
+++ b/_includes/home-wat-wij-doen.html
@@ -4,12 +4,12 @@
       <div class="col-sm-8">
         <h2>Wat wij doen</h2>
         <div class="row">
-          <div class="col-xs-12 visible-xs"><img src="http://brainspa.nl/wp-content/uploads/2015/10/brains2-300x300.png" class="img-responsive"/></div>
+          <div class="col-xs-12 visible-xs"><img src="/assets/img/brains.png" class="img-responsive"/></div>
         </div>
         <p class="lead">{{content | remove: '<p>' | remove: '</p>'}}</p>
         <p><a href="/onze-aanpak" class="btn btn-primary btn-sm">lees meer</a></p>
       </div>
-      <div class="col-sm-4 hidden-xs"><img src="http://brainspa.nl/wp-content/uploads/2015/10/brains2-300x300.png" class="img-responsive"/></div>
+      <div class="col-sm-4 hidden-xs"><img src="/assets/img/brains.png" class="img-responsive"/></div>
     </div>
   </div>
 </section>
