--- a/_includes/home-fasen.html
+++ b/_includes/home-fasen.html
@@ -3,7 +3,9 @@
     <div class="row">{% for post in site.tags['fase'] %}{% if post.publish != false %}
       <div class="col-sm-4 content">
         <div class="content-wrapper">
-          <h2 class="text-center"><i class="fa fa-{{post.icon}}"></i></h2>
+          <h2 class="text-center">
+            {% include {{post.icon}}.html %}
+          </h2>
           <h3>{{post.title}}</h3>
           {{post.content}}
         </div>
