footer and build

--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -14,3 +14,9 @@ footer
         &:hover
           text-decoration: none
           color: tint($text-color,50%)
+  .colofon
+    text-align: right
+    @media screen and (max-width: $screen-xs-max)
+      text-align: center
+    small
+      color: $brand
