--- a/_includes/htmlOpen.html
+++ b/_includes/htmlOpen.html
@@ -21,7 +21,7 @@
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:description" content="{{ site.data.settings.description }}"/>
   <meta name="keywords" content="{{ site.data.settings.keywords }}" />
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,300' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,300' rel='stylesheet' type='text/css'>
   <link href='/assets/fonts/icomoon/style.css' rel='stylesheet' type='text/css'>
   <title>{{ site.data.settings.title }} | {{ page.title }}</title>
   {% if site.dev == 'y' %}
