--- a/assets/css/1-tools/_variables.sass
+++ b/assets/css/1-tools/_variables.sass
@@ -20,7 +20,7 @@ $activelink: #777654
 
 // Links
 $link-color: $brand
-$link-hover-color: $accent
+$link-hover-color: $text-color
 $link-hover-decoration: none
 
 
@@ -40,14 +40,13 @@ $navbar-default-link-hover-color: #777654
 $blockquote-small-color: $brand
 
 // .nav
-$nav-link-hover-bg: transparent
-
+$nav-link-hover-bg: white
 
 // .nav-tabs
 $nav-tabs-border-color: $brand
 $border-radius-base: 0px
-$nav-tabs-active-link-hover-color: $accent
-$nav-tabs-active-link-hover-bg: transparent
+$nav-tabs-active-link-hover-color: $text-color
+$nav-tabs-active-link-hover-bg: white
 $nav-tabs-active-link-hover-border-color: $brand
 
 // .nav-pills
