--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1086,7 +1086,7 @@ a {
   color: #b9b9a7;
   text-decoration: none; }
   a:hover, a:focus {
-    color: #3498db;
+    color: #3b3b3b;
     text-decoration: none; }
   a:focus {
     outline: thin dotted;
@@ -3094,7 +3094,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .btn-link, .btn-link:hover, .btn-link:focus, .btn-link:active {
     border-color: transparent; }
   .btn-link:hover, .btn-link:focus {
-    color: #3498db;
+    color: #3b3b3b;
     text-decoration: none;
     background-color: transparent; }
   .btn-link[disabled]:hover, .btn-link[disabled]:focus, fieldset[disabled] .btn-link:hover, fieldset[disabled] .btn-link:focus {
@@ -3569,7 +3569,7 @@ tbody.collapse.in {
       padding: 5px 10px; }
       .nav > li > a:hover, .nav > li > a:focus {
         text-decoration: none;
-        background-color: transparent; }
+        background-color: white; }
     .nav > li.disabled > a {
       color: #777777; }
       .nav > li.disabled > a:hover, .nav > li.disabled > a:focus {
@@ -3578,7 +3578,7 @@ tbody.collapse.in {
         background-color: transparent;
         cursor: not-allowed; }
   .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
-    background-color: transparent;
+    background-color: white;
     border-color: #b9b9a7; }
   .nav .nav-divider {
     height: 1px;
@@ -3601,8 +3601,8 @@ tbody.collapse.in {
       .nav-tabs > li > a:hover {
         border-color: #eeeeee #eeeeee #b9b9a7; }
     .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-      color: #3498db;
-      background-color: transparent;
+      color: #3b3b3b;
+      background-color: white;
       border: 1px solid #b9b9a7;
       border-bottom-color: transparent;
       cursor: default; }
@@ -4110,7 +4110,7 @@ tbody.collapse.in {
   .pagination > li > span:hover,
   .pagination > li > span:focus {
     z-index: 3;
-    color: #3498db;
+    color: #3b3b3b;
     background-color: #eeeeee;
     border-color: #ddd; }
   .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus,
@@ -8457,7 +8457,7 @@ form {
 
 #goToTop {
   position: fixed;
-  bottom: 60px;
+  bottom: 20px;
   right: 20px;
   padding: 5px;
   display: none;
