header en banner transparent

--- a/_layouts/nieuws.html
+++ b/_layouts/nieuws.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include breadcrumb.html %}
 {% if page.banner %}
-<section class="container-fluid banner" style="background-image: url('/assets/img/banners/{{page.banner}}')"></section>
+<section class="container-fluid banner"><div class="display" style="background-image: url('/assets/img/banners/{{page.banner}}')"></div></section>
 {% endif %}
 <section class="container-fluid {{page.class}}">
 	<div class="container">
