--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -30,7 +30,8 @@ body
     border-color: $accent
 
 h1, h2, h3, h4
-  line-height: 1.1
+  line-height: 1.4
+
 
 .pageTitle
   margin-top: 5px
@@ -71,3 +72,6 @@ h1, h2, h3, h4
 section
   padding-top: 60px
   padding-bottom: 60px
+
+p
+  margin: 0 0 25px 0
