--- a/assets/css/3-sections/_fasen.sass
+++ b/assets/css/3-sections/_fasen.sass
@@ -1,5 +1,4 @@
 section.fasen
-  border-top: 1px solid $text-color
   .fa
     color: $brand
     font-size: 2.2em
@@ -8,7 +7,10 @@ section.fasen
   .content
     border: none
     h3
-      font-weight: 700
+      font:
+        weight: 600
+        size: 16px
+
   .content-wrapper
     padding: 30px
 
