--- a/assets/css/3-sections/_themas.sass
+++ b/assets/css/3-sections/_themas.sass
@@ -9,11 +9,16 @@ section.themas
       text-decoration: none
       color: tint($text-color,25%)
   h3
+    font-size: 16px
     margin-top: 0px
-    min-height: 58px
+    min-height: 46px
     @media screen and (max-width: $screen-xs-max)
       min-height: initial
       margin-top: 20px
+  .content
+    padding-right: 50px
+    @media screen and (max-width: $screen-xs-max)
+      padding-right: 15px
 
 @media screen and (max-width: $screen-xs-max)
   section.themas
