--- a/_includes/home-teaser.html
+++ b/_includes/home-teaser.html
@@ -1,4 +1,5 @@
 <header class="container-fluid">
+  <div class="display" {%if page.banner%}style="background-image: url('/assets/img/banners/{{page.banner}}')"{%endif%}></div>
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
