--- a/assets/css/3-sections/_nav.sass
+++ b/assets/css/3-sections/_nav.sass
@@ -11,7 +11,8 @@ nav.navbar-wrapper
   margin-bottom: 0px
   &.navbar-default
     border-bottom: 1px solid tint($brand,50%)
-    +transition(all 600ms ease-in-out)
+    box-shadow: 0px 0px 3px rgba(0,0,0,0.6)
+    +transition(all 300ms ease-in-out)
     &.navbar-fixed-top
       background-color: white
     .navbar-toggle
