--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7982,7 +7982,7 @@ body {
     border-color: #3498db; }
 
 h1, h2, h3, h4 {
-  line-height: 1.1; }
+  line-height: 1.4; }
 
 .pageTitle {
   margin-top: 5px;
@@ -8022,6 +8022,9 @@ section {
   padding-top: 60px;
   padding-bottom: 60px; }
 
+p {
+  margin: 0 0 25px 0; }
+
 #agenda h2 {
   margin-top: 30px; }
   @media screen and (max-width: 767px) {
@@ -8051,14 +8054,51 @@ section {
       margin-right: 15px; }
 
 .container-fluid.banner {
-  border-bottom: 1px solid #b9b9a7;
-  background-color: #b9b9a7;
-  background-size: cover;
-  background-position: center;
-  height: 200px; }
+  height: 200px;
+  position: relative; }
+  .container-fluid.banner:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    background-color: #b9b9a7;
+    background-image: -webkit-linear-gradient(top, #b9b9a7, #b9b9a7);
+    background-image: linear-gradient(to bottom,#b9b9a7, #b9b9a7);
+    z-index: 2;
+    opacity: 0.65; }
+  .container-fluid.banner .display {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #b9b9a7;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; }
+  .container-fluid.banner:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    background-color: #b9b9a7;
+    background-image: -webkit-linear-gradient(top, #b9b9a7, #b9b9a7);
+    background-image: linear-gradient(to bottom,#b9b9a7, #b9b9a7);
+    z-index: 2;
+    opacity: 1;
+    -webkit-transition: opacity 300ms linear;
+    -moz-transition: opacity 300ms linear;
+    transition: opacity 300ms linear; }
+  .container-fluid.banner.on:after {
+    opacity: 0; }
 
 .container-fluid.brain {
-  border-top: 1px solid #cccccc;
   height: 440px;
   background-image: url("../../assets/img/343285181.jpg");
   background-size: cover;
@@ -8193,27 +8233,26 @@ section.doelgroepen .flipbox-back, .row.doelgroepen .flipbox-back {
 
   .row.doelgroepen {
     padding-bottom: 30px; } }
-section.fasen {
-  border-top: 1px solid #3b3b3b; }
-  section.fasen .fa {
-    color: #b9b9a7;
-    font-size: 2.2em;
-    margin-bottom: 15px; }
-  section.fasen .content {
-    border: none; }
-    section.fasen .content h3 {
-      font-weight: 700; }
-  section.fasen .content-wrapper {
-    padding: 30px; }
-    @media screen and (max-width: 767px) {
-      section.fasen .content-wrapper {
-        padding: 0px; } }
-    @media screen and (min-width: 768px) and (max-width: 991px) {
-      section.fasen .content-wrapper {
-        padding: 5px; } }
-    @media screen and (min-width: 992px) and (max-width: 1199px) {
-      section.fasen .content-wrapper {
-        padding: 15px; } }
+section.fasen .fa {
+  color: #b9b9a7;
+  font-size: 2.2em;
+  margin-bottom: 15px; }
+section.fasen .content {
+  border: none; }
+  section.fasen .content h3 {
+    font-weight: 600;
+    font-size: 16px; }
+section.fasen .content-wrapper {
+  padding: 30px; }
+  @media screen and (max-width: 767px) {
+    section.fasen .content-wrapper {
+      padding: 0px; } }
+  @media screen and (min-width: 768px) and (max-width: 991px) {
+    section.fasen .content-wrapper {
+      padding: 5px; } }
+  @media screen and (min-width: 992px) and (max-width: 1199px) {
+    section.fasen .content-wrapper {
+      padding: 15px; } }
 
 @media screen and (max-width: 767px) {
   footer ul li {
@@ -8244,17 +8283,39 @@ footer {
       color: #b9b9a7; }
 
 header.container-fluid {
-  border-bottom: 1px solid #b9b9a7;
+  position: relative;
   padding-top: 30px;
   padding-bottom: 30px;
-  height: 400px;
-  background-image: url("../../assets/img/Home121.jpg");
-  background-size: cover;
-  background-position: center;
-  background-background-attachment: scroll;
-  background-repeat: no-repeat; }
+  height: 400px; }
+  header.container-fluid:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    background-color: #b9b9a7;
+    background-image: -webkit-linear-gradient(top, #b9b9a7, #b9b9a7);
+    background-image: linear-gradient(to bottom,#b9b9a7, #b9b9a7);
+    z-index: 2;
+    opacity: 0.65; }
+  header.container-fluid .display {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-image: url("../../assets/img/Home121.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: scroll;
+    background-repeat: no-repeat; }
   header.container-fluid h1 {
-    margin-bottom: 30px; }
+    margin-bottom: 30px;
+    color: white;
+    position: relative;
+    z-index: 3; }
     @media screen and (max-width: 767px) {
       header.container-fluid h1 {
         margin-top: 30px;
@@ -8268,9 +8329,31 @@ header.container-fluid {
     @media screen and (min-width: 1200px) {
       header.container-fluid h1 {
         margin-top: 80px; } }
-  @media screen and (max-width: 767px) {
-    header.container-fluid .lead {
-      font-size: 15px; } }
+  header.container-fluid .lead {
+    color: white;
+    position: relative;
+    z-index: 3; }
+    @media screen and (max-width: 767px) {
+      header.container-fluid .lead {
+        font-size: 15px; } }
+  header.container-fluid:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    background-color: #b9b9a7;
+    background-image: -webkit-linear-gradient(top, #b9b9a7, #b9b9a7);
+    background-image: linear-gradient(to bottom,#b9b9a7, #b9b9a7);
+    z-index: 2;
+    opacity: 1;
+    -webkit-transition: opacity 300ms linear;
+    -moz-transition: opacity 300ms linear;
+    transition: opacity 300ms linear; }
+  header.container-fluid.on:after {
+    opacity: 0; }
 
 @media screen and (max-width: 767px) {
   nav.navbar-wrapper {
@@ -8289,9 +8372,10 @@ header.container-fluid {
   margin-bottom: 0px; }
   .navbar.navbar-default {
     border-bottom: 1px solid #dcdcd3;
-    -webkit-transition: all 600ms ease-in-out;
-    -moz-transition: all 600ms ease-in-out;
-    transition: all 600ms ease-in-out; }
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.6);
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out; }
     .navbar.navbar-default.navbar-fixed-top {
       background-color: white; }
     .navbar.navbar-default .navbar-toggle {
@@ -8403,12 +8487,18 @@ section.themas {
       text-decoration: none;
       color: #6c6c6c; }
   section.themas h3 {
+    font-size: 16px;
     margin-top: 0px;
-    min-height: 58px; }
+    min-height: 46px; }
     @media screen and (max-width: 767px) {
       section.themas h3 {
         min-height: initial;
         margin-top: 20px; } }
+  section.themas .content {
+    padding-right: 50px; }
+    @media screen and (max-width: 767px) {
+      section.themas .content {
+        padding-right: 15px; } }
 
 @media screen and (max-width: 767px) {
   section.themas h2 {
@@ -8419,7 +8509,6 @@ section.themas {
     padding-left: 0px;
     list-style: none; } }
 section.wat-wij-doen {
-  border-top: 1px solid #b9b9a7;
   background-color: #c4c4b8; }
   section.wat-wij-doen .btn.btn-primary {
     background-color: #b9b9a7;
